force-app/main/default/objects/Sales_Organization__c/Sales_Organization__c.object-meta.xml
<CustomObject>
    <label>Sales Organization</label>
    <nameField>
        <label>Sales Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>