force-app/main/default/objects/Sales_Organization__c/fields/Default_User__c.field-meta.xml
<CustomField>
    <fullName>Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Organizations1</relationshipName>
    <type>Lookup</type>
</CustomField>