force-app/main/default/objects/Sales_Organization__c/listViews/All_Sales_Organizations.listView-meta.xml
<ListView>
    <fullName>All_Sales_Organizations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Organizations</label>
</ListView>